# mdbook-preprocessor-utils

./: Cargo.toml
example/book/: book.toml
example/mdbook-example/: Cargo.toml
example/mdbook-example/src/: main.rs
src/: copy_assets.rs  html.rs  lib.rs  processor.rs  testing.rs
