[package]
name = "mdbook-preprocessor-utils"
version = "0.1.0"
edition = "2021"

[features]
testing = ["tempfile"]
# default = ["testing"]

[dependencies]
clap = {version = "3", default-features = false, features = ["derive", "std"]}
mdbook = {version = "0.4", default-features = false}
semver = "1"
anyhow = "1"
rayon = "1"
serde_json = "1"
tempfile = {version = "3.3", optional = true}