[package]
name = "mdbook-preprocessor-utils"
version = "0.1.6"
authors = ["Will Crichton <crichton.will@gmail.com>"]
description = "Utilities for writing mdBook preprocessors"
license = "MIT"
edition = "2021"
repository = "https://github.com/willcrichton/mdbook-preprocessor-utils"

[features]
testing = ["tempfile"]

[dependencies]
clap = {version = "3", default-features = false, features = ["derive", "std"]}
mdbook = {version = "0.4", default-features = false}
semver = "1"
anyhow = "1"
rayon = "1"
serde_json = "1"
tempfile = {version = "3.3", optional = true}
env_logger = "0.10.0"
log = "0.4.20"
chrono = "0.4.31"
