[workspace]
resolver = "2"
members = [".", "example/mdbook-example"]

[package]
name = "mdbook-preprocessor-utils"
version = "0.2.0"
authors = ["Will Crichton <crichton.will@gmail.com>"]
description = "Utilities for writing mdBook preprocessors"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/willcrichton/mdbook-preprocessor-utils"

[features]
testing = ["tempfile"]

[dependencies]
clap = {version = "4", default-features = false, features = ["derive", "std"]}
mdbook = {version = "0.4", default-features = false}
semver = "1"
anyhow = "1"
rayon = "1"
serde_json = "1"
tempfile = {version = "3.3", optional = true}
env_logger = "0.10.0"
log = "0.4.20"
chrono = "0.4.31"
html-escape = "0.2"
serde = "1"
